完成上传进度监控、wx.request()的二次封装、图片懒加载

--- a/miniprogram_CloudGallery/project.private.config.json
+++ b/miniprogram_CloudGallery/project.private.config.json
@@ -5,5 +5,25 @@
     "compileHotReLoad": true,
     "urlCheck": false,
     "bigPackageSizeSupport": false
+  },
+  "condition": {
+    "miniprogram": {
+      "list": [
+        {
+          "name": "pages/uploadsetting/uploadsetting",
+          "pathName": "pages/uploadsetting/uploadsetting",
+          "query": "show=true",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "pages/register/register",
+          "pathName": "pages/register/register",
+          "query": "",
+          "launchMode": "default",
+          "scene": 1000
+        }
+      ]
+    }
   }
 }
