--- a/miniprogram_CloudGallery/app.json
+++ b/miniprogram_CloudGallery/app.json
@@ -3,8 +3,8 @@
         "pages/index/index",
         "pages/selectalbum/selectalbum",
         "pages/uploadsetting/uploadsetting",
-        "pages/upload/upload",
-        "pages/register/register"
+        "pages/register/register",
+        "pages/photo/photo"
     ],
     "usingComponents": {
         "van-button": "@vant/weapp/button/index"
@@ -16,5 +16,8 @@
     },
     "componentFramework": "glass-easel",
     "sitemapLocation": "sitemap.json",
-    "lazyCodeLoading": "requiredComponents"
+    "lazyCodeLoading": "requiredComponents",
+    "resolveAlias": {
+        "@/*": "/*"
+    }
 }
