--- a/koa_CloudGallery/package.json
+++ b/koa_CloudGallery/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "@koa/multer": "^3.0.2",
+    "axios": "^1.7.2",
+    "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.1",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.3"
+    "mongoose": "^8.5.3",
+    "redis": "^4.6.15"
   }
 }
